--- a/Frontend/src/components/card.css
+++ b/Frontend/src/components/card.css
@@ -9,6 +9,7 @@
   align-items: center;
   margin-right: 1rem;
   margin-left: 1rem;
+  text-align: center;
 }
 
 .card-container .customer_profile .image_container {
