--- a/Frontend/src/components/card.css
+++ b/Frontend/src/components/card.css
@@ -10,6 +10,7 @@
   margin-right: 1rem;
   margin-left: 1rem;
   text-align: center;
+  text-wrap: nowrap;
 }
 
 .card-container .customer_profile .image_container {
@@ -41,4 +42,5 @@
   font-weight: 400;
   font-style: italic;
   text-align: center;
+  text-wrap: wrap;
 }
