--- a/Frontend/src/components/form.css
+++ b/Frontend/src/components/form.css
@@ -42,7 +42,8 @@
   flex-direction: column;
   padding: 1rem 3rem;
   background-color: #1ab188;
-  max-width: 500px;
+  /* max-width: 500px; */
+  width: 100%;
   border-radius: 8px;
   margin: 5rem 1rem;
   gap: 10px;
