--- a/Frontend/src/components/card.css
+++ b/Frontend/src/components/card.css
@@ -32,7 +32,7 @@
 }
 
 .card-container .rating {
-  padding: 0rem 0 3rem 0;
+  padding: 0rem 3rem 3rem 0rem;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -46,10 +46,9 @@
   text-wrap: wrap;
 }
 
-@media screen and (max-width:550px) { 
+@media screen and (max-width: 550px) {
   .card-container {
     margin-left: 0;
     /* padding-bottom:4rem ; */
   }
-  
 }
